--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             width: 60%;
             margin-left: auto;
             margin-right: auto;
+        }
+
+        .content-center {
+            width: 60%;
+            margin-left: auto;
+            margin-right: auto;
             text-align: center;
         }
     </style>
@@ -20,7 +26,7 @@
 </head>
 <body>
 
-<div class="content">
+<div class="content-center">
     <h3>Ting å gjøre for Ruben</h3>
 </div>
 
@@ -36,7 +42,7 @@
     </ul>
 </div>
 
-<div class="content">
+<div class="content-center">
     <p>
         Huskelisten skal gjøre <a href="https://ll.opplegget.no">LL Stange</a> til verdens vakreste småbruk
     </p>
