--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <ul>
         <li>Fikse sprekken</li>
         <li>Rotere lampa</li>
+        <li>Vinterklargjøre bobil</li>
         <li>Flekke på pipa</li>
         <li>Male rommet til Felix</li>
         <li>Kjelleren (kan avventes)</li>
         <li>Kildesortere alt i garasjen, den ser helt jævlig ut nå</li>
-        <li>Ta inn stativet</li>
     </ul>
 </div>
 
