--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <div class="content">
     <ul>
+        <li>&#10004; <s>Etablere heftig NDI trippelstream opplegg (Capitan ordner)</s></li>
         <li>Fikse sprekken</li>
         <li>Rotere lampa</li>
         <li>Vinterklargjøre bobil</li>
