--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="content">
     <ul>
-        <li>&#10004; <s>Etablere heftig NDI trippelstream opplegg (Capitan ordner)</s></li>
+        <li>Etablere heftig NDI trippelstream opplegg (Capitan ordner) - Status: Forskning pågår, heftig googling</li>
         <li>Fikse sprekken</li>
         <li>Rotere lampa</li>
         <li>Vinterklargjøre bobil</li>
