NDI fixed (almost)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="content">
     <ul>
-        <li>Etablere heftig NDI trippelstream opplegg (Capitan ordner) - Status: Forskning pågår, heftig googling</li>
+        <li>&#10004; Etablere heftig NDI dobbelt<s>trippel</s>stream opplegg (Capitan ordner)</li>
         <li>Fikse sprekken</li>
         <li>Rotere lampa</li>
         <li>Vinterklargjøre bobil</li>
