--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <div class="content">
     <ul>
         <li>&#10004; Etablere heftig NDI dobbelt<s>trippel</s>stream opplegg (Capitan ordner)</li>
+        <li>&#10004; Rotere lampa (mer info: <a href="https://roterlampa.opplegget.no">Roter lampa!</a>)</li>
         <li>Fikse sprekken</li>
-        <li>Rotere lampa</li>
         <li>Vinterklargjøre bobil</li>
         <li>Flekke på pipa</li>
         <li>Male rommet til Felix</li>
