--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li>Ta vare på kroppen og bli frisk!</li>
         <li>Fikse sprekken</li>
         <li>Vinterklargjøre bobil</li>
+        <li>Vinterdekk</li>
         <li>Flekke på pipa</li>
         <li>Male rommet til Felix</li>
         <li>Kjelleren (kan avventes)</li>
