--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <li>&#10004; Etablere heftig NDI dobbelt<s>trippel</s>stream opplegg (Capitan ordner)</li>
         <li>&#10004; Rotere lampa (mer info: <a href="https://roterlampa.opplegget.no">Roter lampa!</a>)</li>
         <li>&#10004; Vinterklargjøre bobil</li>
+        <li>&#10004; Male rommet til Felix (Charlie og Ingvild er også flinke)</li>
         <li>Ta vare på kroppen og bli frisk!</li>
         <li>Fikse sprekken</li>
         <li>Vinterdekk</li>
         <li>Flekke på pipa</li>
-        <li>Male rommet til Felix</li>
         <li>Kjelleren (kan avventes)</li>
         <li>Kildesortere alt i garasjen, den ser helt jævlig ut nå</li>
     </ul>
