--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <li>Vinterdekk</li>
         <li>Flekke på pipa</li>
         <li>Kjelleren (kan avventes)</li>
-        <li>Kildesortere alt i garasjen, den ser helt jævlig ut nå</li>
+        <li>&#10004; (3 ganger) Kildesortere alt i garasjen, den ser helt jævlig ut nå</li>
+        <li>&#10006; Oppdatere lista (Egg)</li>
     </ul>
 </div>
 
